tests/ui-msrv/transmute-mut-dst-not-nocell.stderr
error[E0277]: the trait bound `Dst: Immutable` is not satisfied
  --> tests/ui-msrv/transmute-mut-dst-not-nocell.rs:24:37
   |
24 | const DST_NOT_IMMUTABLE: &mut Dst = transmute_mut!(&mut Src);
   |                                     ^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Immutable` is not implemented for `Dst`
   |
note: required by `AssertDstIsImmutable`
  --> tests/ui-msrv/transmute-mut-dst-not-nocell.rs:24:37
   |
24 | const DST_NOT_IMMUTABLE: &mut Dst = transmute_mut!(&mut Src);
   |                                     ^^^^^^^^^^^^^^^^^^^^^^^^
   = note: this error originates in the macro `transmute_mut` (in Nightly builds, run with -Z macro-backtrace for more info)
